--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ plugins {
 android {
     compileSdk 32
 
+    // Cài đặt binding view >>> thay thế việc phải gọi findViewById
+    buildFeatures {
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "com.androidexam"
         minSdk 23
@@ -31,7 +36,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
